user can now choose among the real twitter trends

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,9 @@
 </head>
 <body>
     <h1>Twitter trends</h1>
-    <select id="keywords" multiple>
-      <option value="volvo">Volvo</option>
-      <option value="saab">Saab</option>
-      <option value="opel">Opel</option>
-      <option value="audi">Audi</option>
-    </select>
+    <h2>Compare twitter trends affluence with each other.</h2>
+    <h3>Press cmd on mac or ctrl on windows for multiple selections</h3>
+    <select id="keywords" multiple></select>
     <button id="validate">Valider</button>
     <div id="tweets"></div>
 </body>
