The user can now stops the progression

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <h3>Press cmd on mac or ctrl on windows for multiple selections</h3>
     <select id="keywords" multiple></select>
     <button id="validate">Valider</button>
+    <button id="stop">Arreter</button>
     <div id="tweets"></div>
 </body>
 </html>
