user can see the progression with a chart bar

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Titre de la page</title>
   <script src="./script.js"></script>
+  <link rel="stylesheet" href="style.css"></script>
 </head>
 <body>
     <h1>Twitter trends</h1>
