translate buttons content

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <h2>Compare twitter trends affluence with each other.</h2>
     <h3>Press cmd on mac or ctrl on windows for multiple selections</h3>
     <select id="keywords" multiple></select>
-    <button id="validate">Valider</button>
-    <button id="stop">Arreter</button>
+    <button id="validate">Start</button>
+    <button id="stop">Stop</button>
     <div id="tweets"></div>
 </body>
 </html>
